# bitcoin-trading-bot-renaissance

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  EXPERIMENTAL.md  MATH_VERIFICATION_REPORT.md  MODELS_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  TRIANGULAR_ARBITRAGE_EXPLAINER.md  WHAT_THE_BOT_DOES.md  advanced_mean_reversion_engine.py  advanced_regime_detector.py  alert_manager.py  alternative_data_engine.py  backfill_bars.py  basis_trading_engine.py  binance_spot_provider.py  bitcoin_baruta.py  breakout_scanner.py  breakout_strategy.py  cascade_data_collector.py  check_readiness.py  cnn_lstm_model.py  cnn_lstm_revolutionary.py  coinbase_advanced_client.py  coinbase_client.py  confidence_calculator.py  confluence_engine.py  consciousness_engine.py  correlation_network_engine.py  crash_feature_builder.py  crash_model_loader.py  cross_asset_engine.py  crypto_regime_detector.py  data_validator.py  (+145 more)
agents/: __init__.py  base.py  config_deployer.py  coordinator.py  data_agent.py  db_schema.py  deployment_monitor.py  event_bus.py  execution_agent.py  meta_agent.py  model_retrainer.py  monitoring_agent.py  observation_collector.py  portfolio_agent.py  proposal.py  quant_researcher.py  risk_agent.py  safety_gate.py  signal_agent.py
analysis/: __init__.py  confluence_engine.py  correlation_network_engine.py  enhanced_technical_indicators.py  fractal_intelligence.py  quantum_oscillator_engine.py  volume_profile_engine.py
arbitrage/: __init__.py  __main__.py  capital_allocator.py  capital_guard.py  orchestrator.py
backtesting/: __init__.py  engine.py
(+449 files in other folders)
